--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -186,7 +186,7 @@
         <div class="row ">
           <div class="col-md-6">
               <div class="panel panel-default" style="height:350px;width:500px;">
-                <div class="panel-heading">Comparativo entre Entradas e Saídas</div>
+                <div class="panel-heading">Comparativo entre Entradas e Saídas ({{ situacao }})</div>
                   <div class="panel-body">
                     <div id="piechart_3d"></div>
                   </div>
