Pesquisa por cpf do responsavel financeiro na listagem de pagamentos

--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -35,6 +35,7 @@
         {% bootstrap_field form.mes %} a
         {% bootstrap_field form.mes_fim %}
         {% bootstrap_field form.serie %}
+        {% bootstrap_field form.cpf_resp_fin %}
         {% bootstrap_field form.efet %}
       </div>
       <p></p>
