ref ALTERA o acesso À HOME, agora ao fazer login o user vai para escolas list e é redirecionado para home se só tiver vínculo com uma escola

--- a/escolar/core/templates/login.html
+++ b/escolar/core/templates/login.html
@@ -62,7 +62,7 @@
       </div>
     {% endfor %}
   {% endif %}
-  <form method="POST" action="{% if not next %}?next=/{% endif %}">
+  <form method="POST" action="{% if not next %}?next={% url 'escolas_list' %}{% endif %}">
     {% csrf_token %}
     <div class="form-group">
       {% bootstrap_field form.username %}
