--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -11,15 +11,19 @@
             <div class="row">
               <div class="col-md-5">
                   <div class="panel panel-default" style="height:300px;width:480px;">
-                    <div class="panel-heading">Recebimentos mês {{ mes_corrente }} / {{ ano_corrente }} : meio usado para receber</div>
-                      <div class="panel-body">
-                        <div id="chart_div_1"></div>
-                      </div>
+                    <div class="panel-heading">
+                      Recebimentos mês {{ mes_corrente }} / {{ ano_corrente }} : meio usado para receber
+                    </div>
+                    <div class="panel-body">
+                      <div id="chart_div_1"></div>
+                    </div>
                   </div>
               </div>
               <div class="col-md-5">
                   <div class="panel panel-default" style="height:300px;width:480px;">
-                    <div class="panel-heading">Pagamentos mês {{ mes_corrente }} / {{ ano_corrente }} : meio usado para pagar</div>
+                    <div class="panel-heading">
+                      Pagamentos mês {{ mes_corrente }} / {{ ano_corrente }} : meio usado para pagar
+                    </div>
                     <div class="panel-body">
                       <div id="chart_div_2"></div>
                     </div>
