ref #2 Coloca um default '--' para o caso de não ter celular e ou email

--- a/escolar/financeiro/templates/financeiro/inadimplentes_list.html
+++ b/escolar/financeiro/templates/financeiro/inadimplentes_list.html
@@ -90,8 +90,8 @@
             </small>
           </td>
           <td>
-            {{ pagamento.celular }}<br>
-            <small>{{ pagamento.email }}</small>
+            {{ pagamento.celular|default:"--" }}<br>
+            <small>{{ pagamento.email|default:"--" }}</small>
           </td>
           <td>
             {{ pagamento.ano }}
