ref #2 coloca um filtro para controlar a ordenação na hora de filtrar

--- a/escolar/financeiro/templates/financeiro/inadimplentes_list.html
+++ b/escolar/financeiro/templates/financeiro/inadimplentes_list.html
@@ -40,6 +40,7 @@
       <div>
         {% bootstrap_field form.aluno_nome %}
         {% bootstrap_field form.pagamentos_atrasados %}
+        {% bootstrap_field form.order %}
       </div>
       <p></p>
 
