ref #6 Disponibiliza o link para listagem de Professores e formulário de ativo inativo; Disponiza o formulário de cadastro de usários para o Diretor: pode cadastrar Diretor e Professor

--- a/escolar/core/templates/core/usuarios_list.html
+++ b/escolar/core/templates/core/usuarios_list.html
@@ -6,9 +6,13 @@
 {% endblock css %}
 {% block page_title %}
   <div class="page-header">
-  <!-- TODO erver esse br -->
+  <!-- TODO rerver esse br -->
   <br>
-  Usuários
+    {% if escola %}
+        Usuários / Escola: {{ escola.nome }} <small></small>
+    {% else %}
+       Usuários
+    {% endif %}
   </div>
 {% endblock page_title %}
 
@@ -27,7 +31,7 @@
     </form>
   </div>
     <table class="table table-striped">
-      {% if can_edit %}
+      {% if can_create %}
         <caption>
            <div style="float:right; margin-right:10px">
               <a href="{% url 'usuario_form' escola.pk %}" class="btn btn-mini btn-success">Novo Usuário</a>
