--- a/escolar/escolas/templates/escolas/alunos_list.html
+++ b/escolar/escolas/templates/escolas/alunos_list.html
@@ -10,7 +10,7 @@
 {% endblock css %}
 {% block page_title %}
   <div class="page-header">
-  <!-- TODO erver esse br -->
+  <!-- TODO rerver esse br -->
   <br>
     {% if escola %}
         Alunos / Escola: {{ escola.nome }} <small>{% if total_alunos%} Total: {{ total_alunos }}{% endif %}</small>
