ref #5 creia views, form e metodo para enviar email de cobrança provisóriamente no fianceiro, talvez seja o caso de criar uma app para messagen ou cobrança

--- a/escolar/financeiro/templates/financeiro/inadimplentes_list.html
+++ b/escolar/financeiro/templates/financeiro/inadimplentes_list.html
@@ -106,7 +106,11 @@
           </td>
           <td>
             {{ pagamento.celular|default:"--" }}<br>
-            <small>{{ pagamento.email|default:"--" }}</small>
+            {% if pagamento.email %}
+              <small> <a href="{% url 'cobranca_form' pagamento.id %}">{{ pagamento.email|default:"--" }}</a></small>
+            {% else %}
+              --
+            {% endif %}
           </td>
           <td>
             {{ pagamento.ano }}
