--- a/escolar/financeiro/templates/financeiro/email_cobranca.html
+++ b/escolar/financeiro/templates/financeiro/email_cobranca.html
@@ -1,3 +1,4 @@
+{% extends 'base.html'%}
 {% load bootstrap3 %}
 {% block css %}
   <style type="text/css">
@@ -42,7 +43,7 @@
         {% if can_edit %}
           <input type="submit" value="Enviar email" class="btn btn-primary">
         {% endif %}
-        <a href="{% url 'aniversariantes_list' escola.id %}" class="btn btn-secondary">Voltar para lista de aniversariantes</a>
+        <a href="{% url 'inadimplentes_list' escola.id %}" class="btn btn-secondary">Voltar para lista de inadimplentes</a>
       </div>
     </form>
   </div>
