ref #5 Cria a listagem de Mensagens Default, Admin pode cadastrar diretor pode editar template, urls e coloca no menu sistema para acesso pelo diretor

--- a/escolar/core/templates/nav_gestor.html
+++ b/escolar/core/templates/nav_gestor.html
@@ -52,6 +52,7 @@
                       <li class="{{ tab_bandeiras }}"><a href="{% url 'bandeiras_list' escola.id %}" title="{{ section.name }}">Bandeiras Aceitas</a></li>
                       <li class="{{ tab_categorias }}"><a href="{% url 'categorias_list' escola.id %}" title="{{ section.name }}">Categorias de Pagamentos</a></li>
                       <li class="{{ tab_grupos }}"><a href="{% url 'grupos_list' escola.id %}" id='id_grupos'>Grupos</a></li>
+                      <li class="{{ tab_mensagem_default }}"><a href="{% url 'msg_default_list' escola.id %}" >Mensagens Default</a></li>
                       <li class="{{ tab_parametros }}"><a href="{% url 'parametros_contrato_list' escola.id %}" title="{{ section.name }}">Parâmetros dos Contratos</a></li>
                       </li>
                       <!-- <li><a href="" title="{{ section.name }}">Cartões</a></li> -->
